samples/_failures_safe/1761627259_9276c8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8eb9fa86.c: In function ‘main’:
./samples/SAFE/__tmp_8eb9fa86.c:172:16: error: missing terminating " character
  172 |         printf("Size mismatch
      |                ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_8eb9fa86.c:172:9: error: expected expression at end of input
  172 |         printf("Size mismatch
      |         ^~~~~~
./samples/SAFE/__tmp_8eb9fa86.c:172:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8eb9fa86.c:172:9: error: expected declaration or statement at end of input
